# nix-uri

./: .gitignore  .justfile  .rust-nightly-toolchain.toml  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: actionlint.yml  ci.yml  editorconfig.yml  nix-develop.yml  nix.yml  rust.yml  update-flake-lock.yml  update-rust-toolchain.yml
benches/: bench.rs
docs/: CONTRIBUTING.md  RELEASE.md
examples/: cli.rs  simple.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_comp_err.rs  fuzz_display.rs  fuzz_display_parsing.rs  fuzz_invalid_compare.rs
nix/: checks.nix  crane.nix  default.nix  devShell.nix  devshells.nix  formatter.nix  meta.nix  overlays.nix  packages.nix  rust.nix  tests.nix
src/: error.rs  flakeref.rs  lib.rs  main.rs  parser.rs  url.rs  urls.rs
src/flakeref/: attr_path.rs  encoding.rs  forge.rs  fr_params.rs  fr_type.rs  fr_urls.rs  location_params.rs  proptest.rs  resource_url.rs  transport_layer.rs  validators.rs
