[package]
name = "nix-uri"
version = "0.1.9"
edition = "2021"
authors = ["Alexander Kenji Berthold"]
description = "Parse and manipulate the nix-uri scheme to and from flakerefs."

license = "MIT"

readme = "README.md"
repository = "https://github.com/a-kenji/nix-uri"
documentation = "https://docs.rs/crate/nix-uri/latest"
homepage = "https://github.com/a-kenji/nix-uri"
include = ["src/**/*", "LICENSE", "README.md", "benches/*"]

autoexamples = true
rust-version = "1.67.0"

keywords = ["nix", "flakes", "uri", "url", "flakeref"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["fuzz"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "2.0.1"
tracing = { version = "0.1.40", optional = true }
url = { version = "2.5.3" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[profile.fuzz]
inherits = "release"
debug = 1
