[package]
name = "nix-uri"
version = "0.1.10"
edition = "2021"
authors = ["Alexander Kenji Berthold"]
description = "Parse and manipulate the nix-uri scheme to and from flakerefs."

license = "MIT"

readme = "README.md"
repository = "https://github.com/a-kenji/nix-uri"
documentation = "https://docs.rs/crate/nix-uri/latest"
homepage = "https://github.com/a-kenji/nix-uri"
include = ["src/**/*", "LICENSE", "README.md", "benches/*"]

autoexamples = true
rust-version = "1.70.0"

keywords = ["nix", "flakes", "uri", "url", "flakeref"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["fuzz"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = { version = "0.1.44", optional = true }
url = { version = "2.5.8" }

[dev-dependencies]
cool_asserts = "2.0.3"
criterion = { version = "0.8.1", features = ["html_reports"] }
rstest = "0.25.0"

[[bench]]
name = "bench"
harness = false

[profile.fuzz]
inherits = "release"
debug = 1
